Modernize sal-akka-raft tests
Use List.of(), Map.of() and Set.copyOf(), as well as properly-imported
assertions.

Change-Id: If7777b0e395394f54e20d1a92b7d33fccb373601
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>